--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,7 @@
         "request": "launch",
         "runtimeArgs": [
           "--inspect-brk",
-          "${workspaceRoot}/node_modules/.bin/jest",
-          "--env=jest-environment-happy-dom"
+          "${workspaceRoot}/node_modules/.bin/jest"
         ],
         "console": "integratedTerminal",
         "internalConsoleOptions": "neverOpen",
